@@ -1,13 +1,10 @@
 package com.wia.enigma.core.service.PageService;
 
-import ch.qos.logback.core.joran.sanity.Pair;
 import com.wia.enigma.core.data.dto.*;
 import com.wia.enigma.core.data.model.InterestAreaModel;
-import com.wia.enigma.core.service.InterestAreaService.InterestAreaService;
 import com.wia.enigma.core.service.PostService.PostService;
 import com.wia.enigma.core.service.UserService.EnigmaUserService;
 import com.wia.enigma.dal.entity.*;
-import com.wia.enigma.dal.enums.EnigmaAccessLevel;
 import com.wia.enigma.dal.enums.EntityType;
 import com.wia.enigma.dal.repository.*;
 import lombok.*;
@@ -15,9 +12,8 @@ import lombok.experimental.FieldDefaults;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
-import javax.swing.text.html.parser.Entity;
-import java.util.Collections;
 import java.util.List;
+import java.util.Objects;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
@@ -37,7 +33,7 @@ public class PageServiceImpl implements PageService{
     final WikiTagRepository wikiTagRepository;
 
     final EnigmaUserService enigmaUserService;
-    final InterestAreaService interestAreaService;
+    final PostService postService;
 
     public ProfilePageDto getProfilePage(Long userId, Long profileId) {
 
@@ -68,6 +64,8 @@ public class PageServiceImpl implements PageService{
 
     private List<PostDto> getPosts(Long userId) {
 
+        EnigmaUser user = enigmaUserRepository.findById(userId).orElseThrow(() -> new RuntimeException("User not found"));
+
         // Collect the initial stream to a list to reuse it
         List<Long> followedInterestAreaIdList = enigmaUserService.getFollowingInterestAreas(userId, userId).stream()
                 .map(InterestAreaDto::getId)
@@ -95,29 +93,37 @@ public class PageServiceImpl implements PageService{
         List<Long> postEnigmaUserIds = posts.stream().map(Post::getEnigmaUserId).collect(Collectors.toList());
 
         List<InterestAreaModel> interestAreaModels =  interestAreaRepository.findAllByIdIn(postInterestAreaIds).stream()
-                .map(interestArea -> interestArea.mapToInterestAreaModel())
-                .collect(Collectors.toList());
+                .map(InterestArea::mapToInterestAreaModel)
+                .toList();
 
-        List<EnigmaUserDto> enigmaUserDtos = enigmaUserRepository.findByIdIn(postEnigmaUserIds).stream().map(enigmaUser -> enigmaUser.mapToEnigmaUserDto())
-                .collect(Collectors.toList());
+        List<EnigmaUserDto> enigmaUserDtos = enigmaUserRepository.findByIdIn(postEnigmaUserIds).stream().map(EnigmaUser::mapToEnigmaUserDto)
+                .toList();
 
         List<EntityTag> entityTags = entityTagRepository.findByEntityIdInAndEntityType(posts.stream()
-                .map(post -> post.getId()).toList(), EntityType.POST);
+                .map(Post::getId).toList(), EntityType.POST);
 
-        List<String> wikiTagIds = entityTags.stream().map(entityTag -> entityTag.getWikiDataTagId()).toList();
+        List<String> wikiTagIds = entityTags.stream().map(EntityTag::getWikiDataTagId).toList();
 
         List<WikiTag> wikiTags = wikiTagRepository.findByIdIn(wikiTagIds);
 
-        return posts.stream().map(post ->
-                post.mapToPostDto(
-                        entityTags.stream().filter(entityTag -> entityTag.getEntityId().equals(post.getId())).map(
-                                entityTag -> wikiTags.stream().filter(wikiTag -> wikiTag.getId().equals(entityTag.getWikiDataTagId())).findFirst().orElse(null)
-                        ).collect(Collectors.toList()),
-                        enigmaUserDtos.stream().filter(enigmaUserDto -> enigmaUserDto.getId().equals(post.getEnigmaUserId())).findFirst().orElse(null),
-                        interestAreaModels.stream().filter(interestAreaModel -> interestAreaModel.getId().equals(post.getInterestAreaId())).findFirst().orElse(null),
-                        postVoteRepository.countByPostIdAndVote(post.getId(), true),
-                        postVoteRepository.countByPostIdAndVote(post.getId(), false),
-                        postCommentRepository.countByPostId(post.getId())
-                )).toList();
+        return posts.stream().map(post -> {
+
+            try {
+                postService.checkAgeRestriction(post, user);
+            } catch (Exception e) {
+                return null;
+            }
+
+            return post.mapToPostDto(
+                    entityTags.stream().filter(entityTag -> entityTag.getEntityId().equals(post.getId())).map(
+                            entityTag -> wikiTags.stream().filter(wikiTag -> wikiTag.getId().equals(entityTag.getWikiDataTagId())).findFirst().orElse(null)
+                    ).collect(Collectors.toList()),
+                    enigmaUserDtos.stream().filter(enigmaUserDto -> enigmaUserDto.getId().equals(post.getEnigmaUserId())).findFirst().orElse(null),
+                    interestAreaModels.stream().filter(interestAreaModel -> interestAreaModel.getId().equals(post.getInterestAreaId())).findFirst().orElse(null),
+                    postVoteRepository.countByPostIdAndVote(post.getId(), true),
+                    postVoteRepository.countByPostIdAndVote(post.getId(), false),
+                    postCommentRepository.countByPostId(post.getId())
+            );
+        }).filter(Objects::nonNull).collect(Collectors.toList());
     }
 }
